--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title : KARANJA VINCENT KARIUKI
+title: KARANJA VINCENT KARIUKI
 
-show_downloads : false
-theme : jekyl-theme-minima
+show_downloads: false
+theme: jekyl-theme-minimal
